# A01-2025-02-03-February-Week02-Rust-Dissertation-ChatGPT-V02

./: .gitignore  A01-ChatGPTLog.md  README.md
ChatGPTFiles/: Cargo.toml  (+1 more)
midi_freq_analyzer/: Cargo.toml  cargorun.txt  error.txt  message1.txt  snippet.txt  snippet3.txt
midi_freq_analyzer/src/: .gitignore  analysis.rs  analyze_frequencies.rs  ascii_visual.rs  audio..rs  audio.rs  audio2.rs  audio_io.rs  bitrate.rs  buffer.rs  buffer_handling.rs  cli_log.rs  cli_log.txt  config.rs  constants.rs  device_routing.rs  device_selection.rs  fft.rs  gui.rs  gui_main.rs  helpers.rs  lib.rs  list_inputs.rs  live_output.rs  lua_ui.rs  main.rs  main2.rs  mutex_handling.rs  noise.rs  noise_profile.rs  notes.rs  output_handler.rs  stash_popped_patch.diff  stream_setup.rs  thread_manager.rs  visualization.rs
midi_freq_analyzer/src - Copy/: analyze_frequencies.rs  buffer_handling.rs  device_selection.rs  helpers.rs  lib.rs  live_output.rs  main.rs  output_handler.rs  stream_setup.rs
midi_freq_analyzer/src - Copy/audio_io/: audio_io_main.rs  mod.rs
midi_freq_analyzer/src - Copy/fft/: fft_analyze_frequencies.rs  fft_main.rs  mod.rs
midi_freq_analyzer/src/analytics/: frequency_analytics.rs  note_label.rs  waveform_analytics.rs
midi_freq_analyzer/src/app/: app_runner.rs  main_ui.rs
midi_freq_analyzer/src/audio/: audio_input.rs
midi_freq_analyzer/src/audio_io/: audio_io_main.rs  mod.rs
midi_freq_analyzer/src/fft/: fft_analyze_frequencies.rs  fft_main.rs
midi_freq_analyzer/src/gui/: gui2.rs  gui_eq_visualizer_app.rs  gui_io_gain_controls.rs  mod.rs  waveform_gui.rs
(+145 files in other folders)
