[package]
name = "midi_freq_analyzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "midi_freq_analyzer"
path = "src/lib.rs"

[dependencies]
mlua = { version = "0.9", features = ["lua54", "vendored"] }
cpal = "0.15"
rustfft = "6.1.0"
fundsp = "0.14"
eframe = "0.31.0"   # Ensure compatibility
wgpu = "24.0.1"     # Set exact version
winapi = { version = "0.3", features = ["winuser", "windef"] }
wasm-bindgen = "0.2.97"  # Ensure compatibility
hound = "3.5.0"
rodio = "0.17"
egui_plot = { version = "0.31", package = "egui_plot" }
egui = "0.31"


